<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_control_diffbot_description</name>
  <version>0.0.0</version>
  <description>Package with URDF and description files of test robots.</description>

  <maintainer email="kelvin.minhle1002@gmail.com">Kelvin Le</maintainer>
  <maintainer email="nguyenleminh1002@gmail.com">Kelvin Le</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
